--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="botton-log">LOG IN</button>
     </header>
     <main>
-        <img src="./img/Illustration 2 (1).png">
+        <img src="./assets/Illustration 2 (1).png">
 
         <div>
             <h1>WE CARE</h1>
